--- a/m/maly-trostenets/index.html
+++ b/m/maly-trostenets/index.html
@@ -2,19 +2,41 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/m/maly-trostenets/index.html" rel="canonical">
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen">
+	<link href="https://encyclopedia.historiography-project.com/m/maly-trostenets/index.html" rel="canonical">
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
+</script>
 <!-- end bbinclude -->
 	<title>Maly Trostenets | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
-<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9">
+<header class="header">
+	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a>
+</header>
+<main class="container-fluid">
+	<div class="row">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 <!-- #bbinclude "header.incl" -->
-<h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
+			<h1>
+				Holocaust Encyclopedia
+			</h1>
+			<p class="lead">
+				uncensored and unconstrained
+			</p>
+			<div id="masthead">
+			</div>
+			<script src="/_assets/js/masthead-min.js">
+</script>
+			<nav id="breadcrumbs">
+			</nav>
+			<script src="/_assets/js/nav-hhp-min.js">
+</script>
 <!-- end bbinclude -->
 			<h2>
 				Maly Trostenets
@@ -47,7 +69,7 @@
 				Another absurd <q>document</q> claims that the three <a href="/tool/gas-vans/index.html">gas vans</a> used near Minsk are not enough to process the Jews, so another one is needed. However, around the same time, the three alleged gas vans at the <a href="/c/chelmno/index.html">Chełmno Camp</a>, presumably of the same type as those deployed near Minsk, are said to have had no problem at all to process many more victims in a much shorter period of time.
 			</p>
 			<p>
-				This entire scenario becomes even more absurd when considering that the Jews deported from Vienna and Theresienstadt travelled huge distances to reach Minsk, passing by places such as <a href="/t/treblinka/index.html">Treblinka</a>, <a href="/locations/camps/sobibor/index.html">Sobibór</a> and/or <a href="/a/auschwitz/index.html">Auschwitz</a> along the way without stopping to get <q>processed</q> there. If the intention had been to murder them, and if these camps located along the way had indeed been <a href="/pure-extermination-camp/aktion-reinhardt-camps/index.html">extermination camps</a>, then the journey of these Jews would have been much shorter. Sending them to Minsk made sense only if the intention was not to kill them but to keep them alive, for whatever purpose.
+				This entire scenario becomes even more absurd when considering that the Jews deported from Vienna and Theresienstadt travelled huge distances to reach Minsk, passing by places such as <a href="/t/treblinka/index.html">Treblinka</a>, <a href="/locations/camps/sobibor/index.html">Sobibór</a> and/or <a href="/a/auschwitz/index.html">Auschwitz</a> along the way without stopping to get <q>processed</q> there. If the intention had been to murder them, and if these camps located along the way had indeed been <a href="/a/aktion-reinhardt-camps/index.html">extermination camps</a>, then the journey of these Jews would have been much shorter. Sending them to Minsk made sense only if the intention was not to kill them but to keep them alive, for whatever purpose.
 			</p>
 			<p>
 				In the larger orthodox picture of the Holocaust, the events said to have transpired at Maly Trostenets can be seen as part of the mass murders by shooting or gas vans that were presumably perpetrated by the <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> and associated units. Because this alleged mass-murder site had some rudimentary features giving it a temporary presence, such as a provisional railway station, an assembly square and several barracks, orthodox historians tend to call it an extermination or death camp. This sets it apart from mere execution sites such as <a href="/locations/other-crime-scene/babi-yar/index.html">Babi Yar</a>. In several respects, Maly Trostenets resembled the <a href="/c/chelmno/index.html">Chełmno Camp</a>.
@@ -70,50 +92,32 @@
 				<tbody>
 					<tr>
 						<td>Soviet Report of 25 July 1944</td>
-						<td>
-
-							546,000
-												</td>
+						<td> 546,000 </td>
 					</tr>
 					<tr>
 						<td>Mira Zaretskaya</td>
-						<td>
-
-							500,000
-												</td>
+						<td> 500,000 </td>
 					</tr>
 					<tr>
 						<td>Lev Lansky</td>
-						<td>
-
-							299,000
-												</td>
+						<td> 299,000 </td>
 					</tr>
 					<tr>
 						<td>Soviet Report of 22 Sept. 1944</td>
-						<td>
-
-							206,500
-												</td>
+						<td> 206,500 </td>
 					</tr>
 					<tr>
 						<td>Isak Grünberg</td>
-						<td>
-
-							45,000
-												</td>
+						<td> 45,000 </td>
 					</tr>
 					<tr>
 						<td>Christian Gerlach</td>
-						<td>
-
-							40,000 to 60,000
-												</td>
+						<td> 40,000 to 60,000 </td>
 					</tr>
 				</tbody>
 			</table>
 			<p>
-				As with all other mass-extermination scenes of the Holocaust, here the victims are said to have been buried at first, but then, in the context of the so-called <q><a href="/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>,</q> it is said that they were all exhumed and without a trace remaining, burned on huge pyres. This operation is said to have lasted only some seven weeks, from end of October until mid-December 1943.
+				As with all other mass-extermination scenes of the Holocaust, here the victims are said to have been buried at first, but then, in the context of the so-called <q><a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>,</q> it is said that they were all exhumed and without a trace remaining, burned on huge pyres. This operation is said to have lasted only some seven weeks, from end of October until mid-December 1943.
 			</p>
 			<p>
 				However, when assessing the various witness testimonies about this alleged operation to remove criminal traces, they turn out to contradict one another, and some of their claims are technically untenable. Furthermore, most of them describe utterly unworkable, even ridiculous scenarios bordering on the absurd, as to how these pyres were built and burned. This clearly leaves the impression of a badly orchestrated atrocity propaganda campaign.
@@ -121,12 +125,28 @@
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Kues2011a">Kues 2011a</a>&amp;<a href="/bibliography/index.html#Kues2011b">b</a>, <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 330-333, 600-610.)
 			</p>
-			<!-- #bbinclude "footer.incl" -->
-</article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-
-<script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
-
+<!-- #bbinclude "footer.incl" -->
+		</article>
+		<div class="col-md-3">
+			<nav class="navigation" id="nav-hhp">
+			</nav>
+			<hr>
+			<aside id="aside">
+			</aside>
+			<script src="/_assets/js/aside-min.js">
+</script>
+		</div>
+	</div>
+</main>
+<footer class="footer" id="footer">
+	<p class="text-center">
+		Copyright &copy; 2022-2024 Academic Research Group
+	</p>
+</footer>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
+</script>
+<script src="/_assets/bootstrap3_player/bootstrap3_player.js">
+</script>
 <!-- end bbinclude -->
 </body>
 </html>
