move Hitler page

--- a/f/final-solution/index.html
+++ b/f/final-solution/index.html
@@ -71,7 +71,7 @@
 						<td> 3 Nov. 1943: Some 42,000 Jewish factory workers are shot in <a href="/m/majdanek/index.html">Majdanek</a> and several of its satellite camps. (<a href="/o/operation-harvest-festival/index.html">Operation <q>Harvest Festival</q></a>) </td>
 					</tr>
 					<tr>
-						<td> 11 May 1944: <a href="/persons/hitler-adolf/index.html">Hitler</a> orders the deployment of 200,000 Jews in the construction of fighter airplanes. </td>
+						<td> 11 May 1944: <a href="/h/hitler-adolf/index.html">Hitler</a> orders the deployment of 200,000 Jews in the construction of fighter airplanes. </td>
 						<td> 16 May 1944: Beginning of mass murder of several hundred thousand Jews from <a href="/locations/country/hungary/index.html">Hungary</a> at Auschwitz-<a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a>. </td>
 					</tr>
 				</tbody>
