--- a/h/index.html
+++ b/h/index.html
@@ -38,7 +38,7 @@
 						<li><a href="/witnesses/victim/hirszman-chaim/index.html">Hirszman, Chaim</a></li>
 						<li><a href="/witnesses/false-witness/hirt-joseph/index.html">Hirt, Joseph</a></li>
 						<li><a href="/h/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
-						<li><a href="/persons/hitler-adolf/index.html">Hitler, Adolf</a></li>
+						<li><a href="/h/hitler-adolf/index.html">Hitler, Adolf</a></li>
 						<li><a href="/witnesses/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a></li>
 						<li><a href="/h/hofle-hans/index.html">Höfle, Hans</a></li>
 						<li><a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
