--- a/introduction/index.html
+++ b/introduction/index.html
@@ -331,7 +331,7 @@
 						<td>3 Nov. 1943: Some 42,000 Jewish factory workers are shot in Majdanek and several of its satellite camps. (<u><a href="/o/operation-harvest-festival/index.html">Operation <q>Harvest Festival</q></a></u>)</td>
 					</tr>
 					<tr>
-						<td>11 May 1944: <u><a href="/persons/hitler-adolf/index.html">Hitler</a></u> orders the deployment of 200,000 Jews in the construction of fighter airplanes.</td>
+						<td>11 May 1944: <u><a href="/h/hitler-adolf/index.html">Hitler</a></u> orders the deployment of 200,000 Jews in the construction of fighter airplanes.</td>
 						<td>16 May 1944: Beginning of mass murder of several hundred thousand Jews from <u><a href="/locations/country/hungary/index.html">Hungary</a></u> at Auschwitz-Birkenau.</td>
 					</tr>
 				</tbody>
