--- a/persons/politician/korherr-richard/index.html
+++ b/persons/politician/korherr-richard/index.html
@@ -29,7 +29,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Dr. Richard Korherr (30 Oct. 1903 &mdash; 24 Nov. 1989) was a statistician, and from late 1940, the head of the SS&rsquo;s statistical office. In early 1943, <a href="/persons/himmler-heinrich/index.html">Himmler</a> ordered him to compile a report on the trends of European Jewish population developments since the National Socialists&rsquo; rise to power. After several discussions and some correspondence with Himmler, Korherr submitted a 16-page long version for Himmler (Nuremberg Document NO-5194), and a 6½-page short version meant for <a href="/persons/hitler-adolf/index.html">Hitler</a> (NO-5193).
+				Dr. Richard Korherr (30 Oct. 1903 &mdash; 24 Nov. 1989) was a statistician, and from late 1940, the head of the SS&rsquo;s statistical office. In early 1943, <a href="/persons/himmler-heinrich/index.html">Himmler</a> ordered him to compile a report on the trends of European Jewish population developments since the National Socialists&rsquo; rise to power. After several discussions and some correspondence with Himmler, Korherr submitted a 16-page long version for Himmler (Nuremberg Document NO-5194), and a 6½-page short version meant for <a href="/h/hitler-adolf/index.html">Hitler</a> (NO-5193).
 			</p>
 			<p>
 				These two reports and a few accompanying letters are seen by the orthodoxy as a smoking gun for the Holocaust. They claim that these documents prove that some two million Jews had been murdered up to early 1943. The subsequent discussion will focus on the long version.
