--- a/r/religion-holocaust-as/index.html
+++ b/r/religion-holocaust-as/index.html
@@ -30,7 +30,7 @@
 			</p>
 			<ul>
 				<li><span style="text-decoration: underline;">Monotheism</span> = Thou shalt not abhor any other genocide as much as, and next to, the Jewish. The Holocaust is unique.</li>
-				<li><span style="text-decoration: underline;">Devil Incarnate</span> = <a href="/persons/hitler-adolf/index.html">Adolf Hitler</a>.</li>
+				<li><span style="text-decoration: underline;">Devil Incarnate</span> = <a href="/h/hitler-adolf/index.html">Adolf Hitler</a>.</li>
 				<li><span style="text-decoration: underline;">Witches, sorcerers, wizards and warlocks</span> = the evil Nazis.</li>
 				<li><span style="text-decoration: underline;">Absolute Evil</span> = viral, eliminatory anti-Semitism.</li>
 				<li><span style="text-decoration: underline;">Golgotha</span> = Auschwitz is the million-fold Jewish Golgotha. The sacrifice of the Christ-god at Calvary has been eclipsed by the suffering of the Jewish people at Auschwitz.</li>
