--- a/h/hitler-adolf/index.html
+++ b/h/hitler-adolf/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- #bbinclude "metatags.incl" -->
 <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/persons/hitler-adolf/index.html" rel="canonical">
+<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/h/hitler-adolf/index.html" rel="canonical">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
@@ -29,7 +29,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Adolf Hitler (20 April 1889 &mdash; 30 April 1945) is the central figure in the Holocaust narrative. Considering the monolithic nature of Hitler&rsquo;s dictatorship, his decisions, orders and decrees are what should have caused, started and shaped the progress of the Holocaust. Yet when we look at the historical records, all we have are some general threats uttered during polemic speeches which Hitler used to shape public opinion.
+				Adolf Hitler (20 April 1889 &ndash; 30 April 1945) is the central figure in the Holocaust narrative. Considering the monolithic nature of Hitler&rsquo;s dictatorship, his decisions, orders and decrees are what should have caused, started and shaped the progress of the Holocaust. Yet when we look at the historical records, all we have are some general threats uttered during polemic speeches which Hitler used to shape public opinion.
 			</p>
 			<p>
 				In Hitler&rsquo;s political manifesto <i>Mein Kampf</i> (<i>My Struggle</i>), one notable statement about the Jews is the following:
