--- a/persons/frank-hans/index.html
+++ b/persons/frank-hans/index.html
@@ -44,7 +44,7 @@
 				<li>13 October 1941: During a meeting with <a href="/persons/politician/rosenberg-alfred/index.html">Alfred Rosenberg</a>, minister for the occupied eastern territories, Frank suggests expelling Jews from the Government General into the occupied territories. Rosenberg stated that this was already in process, but would take some time. (<a href="/bibliography/index.html#Rudolf_Mattogno">Rudolf/Mattogno 2017</a>, pp. 269f.)</li>
 				<li>17 October 1941: As a result of a governmental meeting, it is stated that a final clarification of the <q>Jewish Question</q> will be possible only once the complete deportation of all Jews can be accomplished. (<i><a href="/bibliography/index.html#IMT">IMT</a>,</i> Vol. 29, p. 494)</li>
 				<li>20 November 1941: Frank announces that the Polish Jews would ultimately be transferred further east. (<a href="/bibliography/index.html#Kulischer">Kulischer 1943</a>, pp. 110f.)</li>
-				<li>16 December 1941: With reference to Hitler&rsquo;s <q>prophetic</q> speech of 30 January 1939 (see the entry on <a href="/hitler-adolf/index.html">Adolf Hitler</a>), Frank states during a governmental meeting that <q>we have to do away with the Jews,</q> and continues:</li>
+				<li>16 December 1941: With reference to Hitler&rsquo;s <q>prophetic</q> speech of 30 January 1939 (see the entry on <a href="/h/hitler-adolf/index.html">Adolf Hitler</a>), Frank states during a governmental meeting that <q>we have to do away with the Jews,</q> and continues:</li>
 			</ul>
 			<blockquote>
 				<p>
