--- a/t/index.html
+++ b/t/index.html
@@ -39,7 +39,7 @@
 						<li><a href="/witnesses/victim/trubakov-ziama/index.html">Trubakov, Ziama</a></li>
 						<li><a href="/persons/politician/turner-harald/index.html">Turner, Harald</a></li>
 						<li><a href="/witnesses/victim/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
-						<li><a href="/categories/concepts/typhus/index.html">Typhus</a></li>
+						<li><a href="/t/typhus/index.html">Typhus</a></li>
 					</ul>
 				</div>
 			</div>
