--- a/witnesses/barton-russell/index.html
+++ b/witnesses/barton-russell/index.html
@@ -34,7 +34,7 @@
 				</p>
 			</blockquote>
 			<p>
-				The piles of corpses found by the British, primarily caused by a rampaging <a href="/categories/concepts/typhus/index.html">typhus</a> epidemic, was amply misused by Allied propaganda to portray Bergen-Belsen as a death camp where inmates were killed or left to die in masses on purpose. (See the entry on <a href="/instruments/camp/other-camp/bergen-belsen/index.html">Bergen-Belsen</a> for more.)
+				The piles of corpses found by the British, primarily caused by a rampaging <a href="/t/typhus/index.html">typhus</a> epidemic, was amply misused by Allied propaganda to portray Bergen-Belsen as a death camp where inmates were killed or left to die in masses on purpose. (See the entry on <a href="/instruments/camp/other-camp/bergen-belsen/index.html">Bergen-Belsen</a> for more.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
