--- a/persons/goring-hermann/index.html
+++ b/persons/goring-hermann/index.html
@@ -29,7 +29,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Hermann Göring (12 Jan. 1893 &mdash; 15 Oct. 1946), <i>Reichsmarschall,</i> was the second-most powerful man in the Third Reich after <a href="/hitler-adolf/index.html">Adolf Hitler</a>. During World War One, he was a decorated war pilot, becoming something of a national hero. During the Second World War, his main responsibilities lay in organizing Germany&rsquo;s economy and its air force.
+				Hermann Göring (12 Jan. 1893 &mdash; 15 Oct. 1946), <i>Reichsmarschall,</i> was the second-most powerful man in the Third Reich after <a href="/h/hitler-adolf/index.html">Adolf Hitler</a>. During World War One, he was a decorated war pilot, becoming something of a national hero. During the Second World War, his main responsibilities lay in organizing Germany&rsquo;s economy and its air force.
 			</p>
 			<p>
 				Göring&rsquo;s role in the persecution of Europe&rsquo;s Jews was very limited, but decisive. On 31 July 1941, he expanded <a href="/heydrich-reinhardt/index.html">Reinhardt Heydrich</a>&rsquo;s task to solve the Jewish question in Germany by emigration and evacuation, as decreed back on 24 January 1939, to encompass all of Germany&rsquo;s area of influence in Europe. Göring also ordered Heydrich to submit a draft plan to implement this comprehensive or total solution of the Jewish question. In this document, Göring used the terms <i>Gesamtlösung</i> (total or comprehensive solution) and <i>Endlösung</i> (end or <a href="/categories/concepts/final-solution/index.html">final solution</a>) synonymously.
