--- a/h/hitler-adolf/index.html
+++ b/h/hitler-adolf/index.html
@@ -167,7 +167,7 @@
 				In his book <i>Hitler&rsquo;s War,</i> British historian David Irving concluded that Hitler didn&rsquo;t know what <a href="/himmler-heinrich/index.html">Himmler</a> and <a href="/heydrich-reinhardt/index.html">Heydrich</a> were doing behind his back &mdash; which seems quite unbelievable. It appears more appropriate to conclude that Hitler had to fight a war against the entire world. The skirmish against the Jews, small in comparison, simply wasn&rsquo;t important enough for him to care too much.
 			</p>
 			<p>
-				(See also the next entry on the <a href="/h/hitler-order-final-solution/index.html">Hitler Order</a> as well as the entry on <a href="/categories/concepts/extirpation/index.html">Extirpation</a>; for more details, see <a href="/bibliography/index.html#Werner">Werner 2019</a>, pp. 25-31; <a href="/bibliography/index.html#Dalton2023">Dalton 2023</a>; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 209-226.)
+				(See also the next entry on the <a href="/h/hitler-order-final-solution/index.html">Hitler Order</a> as well as the entry on <a href="/e/extirpation/index.html">Extirpation</a>; for more details, see <a href="/bibliography/index.html#Werner">Werner 2019</a>, pp. 25-31; <a href="/bibliography/index.html#Dalton2023">Dalton 2023</a>; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 209-226.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
