--- a/persons/politician/goebbels-joseph/index.html
+++ b/persons/politician/goebbels-joseph/index.html
@@ -79,7 +79,7 @@
 				</p>
 			</blockquote>
 			<p>
-				Owing to the ambiguity of the German verb <i>ausrotten</i> (see the entry on <a href="/categories/concepts/extirpation/index.html">extirpation</a>), this could mean anything from forced evacuation to mass murder. In any case, Himmler&rsquo;s boastful claims stand in stark contrast to the facts on the ground. Himmler was bragging and fibbing, in the face an increasingly deteriorating war situation. (See the entry on <a href="/h/himmler-speeches/index.html">Himmler speeches</a>.)
+				Owing to the ambiguity of the German verb <i>ausrotten</i> (see the entry on <a href="/e/extirpation/index.html">extirpation</a>), this could mean anything from forced evacuation to mass murder. In any case, Himmler&rsquo;s boastful claims stand in stark contrast to the facts on the ground. Himmler was bragging and fibbing, in the face an increasingly deteriorating war situation. (See the entry on <a href="/h/himmler-speeches/index.html">Himmler speeches</a>.)
 			</p>
 			<p>
 				The second entry is dated 14 March 1945, where we read:
