--- a/v/index.html
+++ b/v/index.html
@@ -29,6 +29,7 @@
 					<li><a href="/witnesses/victim/venezia-morris/index.html">Venezia, Morris</a></li>
 					<li><a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
 					<li><a href="/technologies/ventilation/index.html">Ventilation</a></li>
+					<li><a href="/e/extirpation/index.html"><i>vernichtung</i></a></li>
 					<li><a href="/persons/politician/voss-peter/index.html">Voss, Peter</a></li>
 					<li><a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
 				</ul>
