--- a/a/auschwitz-main-camp/index.html
+++ b/a/auschwitz-main-camp/index.html
@@ -56,7 +56,7 @@
 				<a id="Propaganda"></a>Propaganda History
 			</h3>
 			<p>
-				Note: Propaganda that cannot be allocated with certainty to the Auschwitz Main Camp or any of its satellite camps is addressed in the entry on <a href="/birkenau/index.html">Birkenau</a>.
+				Note: Propaganda that cannot be allocated with certainty to the Auschwitz Main Camp or any of its satellite camps is addressed in the entry on <a href="/b/birkenau/index.html">Birkenau</a>.
 			</p>
 			<h4>
 				<a id="Camp"></a>Camp Resistance
