--- a/a/auschwitz/index.html
+++ b/a/auschwitz/index.html
@@ -50,7 +50,7 @@
 				Planning and construction of the camp started immediately near the village of Brzezinka (German: Birkenau) two miles west of the town of Oświęcim. However, except for a few thousand PoWs arriving at Auschwitz in October 1941, the large wave of Soviet PoWs never arrived, so the camp&rsquo;s function changed from a PoW camp to a transit camp and forced-labor camp for Jews deported from numerous European countries.
 			</p>
 			<p>
-				On 22 November 1943, the PoW camp<a href="/birkenau/index.html"> Auschwitz-Birkenau</a> was separated from the Auschwitz Main Camp (then renamed to Auschwitz I) and became an independent concentration camp called Auschwitz II. However, on 25 November 1944, the Birkenau Camp lost its independence again, and was reintegrated in what was then simply called Auschwitz Concentration Camp.
+				On 22 November 1943, the PoW camp<a href="/b/birkenau/index.html"> Auschwitz-Birkenau</a> was separated from the Auschwitz Main Camp (then renamed to Auschwitz I) and became an independent concentration camp called Auschwitz II. However, on 25 November 1944, the Birkenau Camp lost its independence again, and was reintegrated in what was then simply called Auschwitz Concentration Camp.
 			</p>
 			<p>
 				For a more detailed description of this camp, see its dedicated entry.
