--- a/c/index.html
+++ b/c/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<li><a href="/c/camps/index.html">Camps</a></li>
 						<li><a href="/c/carbon-monoxide/index.html">Carbon Monoxide</a></li>
-						<li><a href="/categories/concept/censorship/index.html">Censorship</a></li>
+						<li><a href="/c/censorship/index.html">Censorship</a></li>
 						<li><a href="/c/censorship/index.html">Censorship</a></li>
 						<li><a href="/witnesses/victim/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
 						<li><a href="/witnesses/victim/chasan-shaul/index.html">Chasan, Shaul</a></li>
@@ -36,7 +36,7 @@
 						<li><a href="/categories/concepts/code-language/index.html">Code Language</a></li>
 						<li><a href="/witnesses/victim/cohen-leon/index.html">Cohen, Leon</a></li>
 						<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
-						<li><a href="/categories/concept/compensation/index.html">Compensation</a></li>
+						<li><a href="/c/compensation/index.html">Compensation</a></li>
 						<li><a href="/categories/concepts/compensation/index.html">Compensation</a></li>
 						<li><a href="/c/concentration-camps/index.html">Concentration Camps</a></li>
 						<li><a href="/categories/concepts/construction-office/index.html">Construction Office</a></li>
