--- a/legal/trial/demjanjuk-john/index.html
+++ b/legal/trial/demjanjuk-john/index.html
@@ -54,7 +54,7 @@
 				<a id="Backfire"></a>Backfire
 			</h4>
 			<p>
-				An expert on the reliability of witness testimonies called by the defense during the trial, as well as the director of Israel&rsquo;s Holocaust research center <a href="/institution/yad-vashem/index.html">Yad Vashem</a>, Shmuel Krakowski, agreed that many, if not most, of the witness statements made in court and found in archives in Holocaust matters are unreliable. In the end, the Jerusalem Court of Appeals agreed, threw out all witness testimony as unreliable, and acquitted Demjanjuk for lack of evidence. It was a resounding success of relentless lobbying by Holocaust skeptics behind the scenes. Later on, Demjanjuk was repatriated to the U.S., and his citizenship was restored.
+				An expert on the reliability of witness testimonies called by the defense during the trial, as well as the director of Israel&rsquo;s Holocaust research center <a href="/y/yad-vashem/index.html">Yad Vashem</a>, Shmuel Krakowski, agreed that many, if not most, of the witness statements made in court and found in archives in Holocaust matters are unreliable. In the end, the Jerusalem Court of Appeals agreed, threw out all witness testimony as unreliable, and acquitted Demjanjuk for lack of evidence. It was a resounding success of relentless lobbying by Holocaust skeptics behind the scenes. Later on, Demjanjuk was repatriated to the U.S., and his citizenship was restored.
 			</p>
 			<h4>
 				<a id="Show"></a>Show Trial No. 2
