--- a/locations/country/baltic-countries/index.html
+++ b/locations/country/baltic-countries/index.html
@@ -39,7 +39,7 @@
 				When the Soviet Union occupied the Baltic countries in the summer of 1940, many locals suffered terribly during the ensuing one-year long Stalinist terror. When the German armed forces moved in during the summer of 1941, they were initially welcome as liberators by many. However, Germany was also the country that abandoned the two northern Baltic states of Estonia and Latvia by handing them over to Stalin in a secret addendum to the Hitler-Stalin Pact.
 			</p>
 			<p>
-				Some inhabitants in the Baltic states were enraged enough about the Stalinist atrocities to start pogroms against local Jews and any Soviet collaborator who had stayed behind. However, this sentiment was not nearly as widespread and deep-seated as in <a href="/ukraine/index.html">Ukraine</a>. That country had a much longer and more dreadful history of suffering at the hands of Russian and Soviet imperialists than the Baltics.
+				Some inhabitants in the Baltic states were enraged enough about the Stalinist atrocities to start pogroms against local Jews and any Soviet collaborator who had stayed behind. However, this sentiment was not nearly as widespread and deep-seated as in <a href="/u/ukraine/index.html">Ukraine</a>. That country had a much longer and more dreadful history of suffering at the hands of Russian and Soviet imperialists than the Baltics.
 			</p>
 			<p>
 				The first <a href="/s/stahlecker-reports/index.html">Stahlecker Report</a> mentions that instigating pogroms against collaborators and Jews wasn&rsquo;t as easy as had been hoped, and drastic actions had to be taken to carry things along. In the same vein, Baltic collaboration with Germans, while existing, was in general also not as pervasive as in Ukraine.
