--- a/witnesses/false-witness/false-witnesses/index.html
+++ b/witnesses/false-witness/false-witnesses/index.html
@@ -48,7 +48,7 @@
 				<li>Karin Mylius</li>
 				<li>Wolfgang Seibert</li>
 				<li>Axel Spörl</li>
-				<li><a href="/uthgenannt-otto/index.html">Otto Uthgenannt</a></li>
+				<li><a href="/u/uthgenannt-otto/index.html">Otto Uthgenannt</a></li>
 				<li>Irena Wachendorff</li>
 				<li><a href="/wael-monique-de/index.html">Monique de Wael</a> (aka Misha Defonesca)</li>
 				<li><a href="/watt-donald/index.html">Donald Watt</a></li>
