move files / rename download

--- a/change-log/index.html
+++ b/change-log/index.html
@@ -964,7 +964,7 @@
 				We added two brief entries on the two individuals who took the photographs that were later assembled into what came to be known as <i>The Auschwitz Album,</i> on the arrival and processing of Jews deported from Hungary to Auschwitz in the summer of 1944: <a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a> and <a href="/witnesses/perpetrator/walter-bernhard/index.html">Walter, Bernhard</a>.
 			</p>
 			<p>
-				We furthermore added a redirect for the term <q>Haavara</q> pointing to the entry on <a href="/plans-orders/emigration/index.html">Emigration</a>: <a href="/plans-orders/emigration/index.html">Haavara Agreement &rarr; Emigration</a>
+				We furthermore added a redirect for the term <q>Haavara</q> pointing to the entry on <a href="/e/emigration/index.html">Emigration</a>: <a href="/e/emigration/index.html">Haavara Agreement &rarr; Emigration</a>
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
