--- a/e/index.html
+++ b/e/index.html
@@ -29,7 +29,7 @@
 						<li><a href="/e/einsatzgruppen/index.html">Einsatzgruppen</a></li>
 						<li><a href="/witnesses/victim/eisenschmidt-eliezer/index.html">Eisenschmidt, Eliezer</a></li>
 						<li><a href="/persons/legal-professional/eitan-dov/index.html">Eitan, Dov</a></li>
-						<li><a href="/plans-orders/emigration/index.html">Emigration</a></li>
+						<li><a href="/e/emigration/index.html">Emigration</a></li>
 						<li><a href="/witnesses/victim/engel-chaim/index.html">Engel, Chaim</a></li>
 						<li><a href="/witnesses/victim/epstein-berthold/index.html">Epstein, Berthold</a></li>
 						<li><a href="/witnesses/perpetrator/erber-josef/index.html">Erber, Josef</a></li>
