--- a/h/index.html
+++ b/h/index.html
@@ -22,7 +22,7 @@
 			<div class="columns">
 				<div id="toc">
 					<ul>
-						<li><a href="/plans-orders/emigration/index.html">Haavara Agreement</a></li>
+						<li><a href="/e/emigration/index.html">Haavara Agreement</a></li>
 						<li><a href="/witnesses/perpetrator/hahle-johannes/index.html">Hähle, Johannes</a></li>
 						<li><a href="/objects/hair-of-deportees/index.html">Hair of Deportees</a></li>
 						<li><a href="/witnesses/victim/hanel-salomea/index.html">Hanel, Salomea</a></li>
