--- a/i/index.html
+++ b/i/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<li><a href="/legal/company/i-g-farbenindustrie-ag/index.html">I.G. Farbenindustrie AG</a></li>
 						<li><a href="/i/instruments-of-extermination/index.html">Instruments, of Extermination</a></li>
-						<li><a href="/plans-orders/intentionality/index.html">Intentionality</a></li>
+						<li><a href="/i/intentionality/index.html">Intentionality</a></li>
 						<li><a href="/legal/trial/international-military-tribunal/index.html">International Military Tribunal</a></li>
 						<li><a href="/legal/institution/international-tracing-service-arolsen/index.html">International Tracing Service, Arolsen</a></li>
 						<li><a href="/toxins-chemicals/iron-blue/index.html">Iron Blue</a></li>
